# bmcc

./: .dockerignore  .env-local  .gitignore  AGENTS.md  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.yml  gnss_logger.py  pyproject.toml
.github/workflows/: divio-deployment.yml
bmcc/: asgi.py  context_processors.py  fields.py  settings.py  storage.py  urls.py
bmcc/celery/: app.py  apps.py  worker.py
bmcc/missions/: admin.py  forms.py  models.py  tasks.py  urls.py  urls_landing.py  views.py  views_asset_landing.py  views_asset_launch.py  views_predictions.py
bmcc/missions/migrations/: 0001_initial.py  0002_launchsitecandidate.py  0003_mission_flight_params_launchsite_prediction.py  0004_launchsite_prediction_history.py  0005_launchsitecandidate_prediction_and_more.py  0005_remove_launchsitecandidate_altitude_and_more.py  0006_mission_mission_window.py  0007_rename_launchsitecandidate_launchsite.py  0008_fix_negative_longitudes.py  0009_alter_launchsite_location.py
bmcc/missions/templates/missions/: base.html  launch_site_detail.html  launch_site_form.html  launch_site_update_form.html  launch_sites.html  (+2 more)
bmcc/missions/tests/: test_kml_views.py  test_mission_detail_view.py
bmcc/predictions/: admin.py  apps.py  models.py  tasks.py
bmcc/predictions/backends/: tawhiri.py
bmcc/predictions/migrations/: 0001_initial.py  0002_use_coordinate_field.py
bmcc/templates/: base.html
bmcc/tracking/: admin.py  constants.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
bmcc/tracking/backends/: owntracks.py  spot.py
bmcc/tracking/migrations/: 0001_initial.py  0002_asset_launch_site.py  0002_ping_asset_ping_mission.py  0003_alter_beacon_backend_class_path.py  0004_ping_altitude.py  0005_ping_accuracy_alter_ping_altitude_alter_ping_speed.py  0006_populate_coords.py  0007_alter_ping_unique_together.py  0008_alter_ping_unique_together.py  0009_ping_prediction.py  0010_merge_0002_asset_launch_site_0009_ping_prediction.py  0011_alter_ping_position.py  0012_asset_landing_fields.py  0013_owntracksmessage.py
bmcc/tracking/tests/: test_asset_list_view.py
bmcc/utils/: kml.py
(+11 files in other folders)
